# pomelo

./: .gitignore  docker-compose.yml  hello.py  package-lock.json  package.json  pyproject.toml  seed.sql
app/: Dockerfile  pyproject.toml
app/app/: __init__.py  models.py  producer.py
app/app/routes/: recipes.py  shopping_list.py  stores.py
app/app/schema/: ingredients.py  recipes.py  shopping_list.py  tags.py
app/tests/: test_recipes.py
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: AppSidebar.tsx  BarGraph.tsx  Calendar.tsx  ListFilteringControls.tsx  Login.tsx  MapPopup.tsx  (+12 more)
embedder/: Dockerfile  main.py  pyproject.toml
embedder/src/: db.py  ollama.py  schema.py
embedder/tests/: test_schema.py
flask/: app.py  db.py  home.py
pomelo-client/: package-lock.json  package.json
pomelo-client/src/: App.css  App.tsx  index.css
pomelo-server/: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  seed.sql
pomelo-server/app/: __init__.py  auth.py  models.py  routes.py  schemas.py  services.py
pomelo-server/app/routes/: ingredients.py  meal_plan.py  recipes.py  shopping_list.py  stores.py
pomelo-server/app/schema/: ingredients.py  meal_plan.py  recipes.py  shopping_list.py  stores.py
pomelo-server/lib/: app.py  db.py  queries.py  routes.py  schemas.py
pomelo-server/pgdata/base/1/: pg_internal.init
pomelo-server/pgdata/base/5/: pg_internal.init
pomelo-server/pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
pomelo-server/pgdata/pg_stat/: pgstat.stat
rag/: Dockerfile  app.py  pyproject.toml
rag/app/: __init__.py  constants.py  db.py  ollama.py  prompts.py  route.py  schema.py
server/flask/: auth.py
(+52 files in other folders)
