[project]
name = "pomelo"
version = "0.1.0"
description = "A weekly recipe and shopping organizational app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pytest>=8.4.1",
    "quixstreams>=3.17.0",
    "sqlalchemy>=2.0.38",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
