[project]
name = "pomelo"
version = "0.1.0"
description = "A weekly recipe and shopping organizational app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
